updating for 2020 and testing

--- a/03-dev-komodo-bins/Dockerfile
+++ b/03-dev-komodo-bins/Dockerfile
@@ -1,6 +1,35 @@
-FROM komodocakeshop/dev-komodo-builders-allinone
-RUN wget https://github.com/KomodoPlatform/komodo/releases/download/dev-multios-0.4.0a-alpha/linux_0.4.0a.tar.gz
-RUN tar zxvf linux_0.4.0a.tar.gz
+FROM ubuntu:18.04
+RUN apt-get update && \
+    apt-get -y install \
+    build-essential \
+    pkg-config \
+    libc6-dev \
+    m4 \
+    autoconf \
+    libboost-all-dev \
+    libsodium-dev \
+    curl \
+    libtool \
+    make \
+    ncurses-dev \
+    unzip \
+    python \
+    zlib1g-dev \
+    wget \
+    bsdmainutils \
+    automake \
+    libssl-dev \
+    libprotobuf-dev \
+    protobuf-compiler \
+    libqrencode-dev \
+    libdb++-dev \
+    libcurl4-gnutls-dev \
+    libgconf-2-4 && \
+    apt-get -y clean; \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+#RUN wget https://github.com/KomodoPlatform/komodo/releases/download/dev-multios-0.4.0a-alpha/linux_0.4.0a.tar.gz
+RUN wget https://github.com/KomodoPlatform/komodo/releases/download/cd_release_5000f2a_dev/komodo_5000f2a_dev_linux.zip
+RUN unzip komodo_5000f2a_dev_linux.zip
 RUN ln -sf /linux64/komodod /usr/local/bin
 RUN ln -sf /linux64/komodo-cli /usr/local/bin
 CMD ["/bin/bash"]
