--- a/04-dev-komodo-in-a-box/Dockerfile
+++ b/04-dev-komodo-in-a-box/Dockerfile
@@ -1,10 +1,13 @@
-FROM coingateways/dev-komodo:5000f2a
+FROM coingateways/dev-komodo:5000f2a.1
 RUN apt-get update && \
     apt-get -y install \
     dialog \
+    vim \
     git \
     jq && \
     apt-get -y clean; \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-RUN git clone https://github.com/komodo-cakeshop/komodo-in-a-box.git
+RUN git clone https://github.com/imylomylo/komodo-in-a-box.git && \
+  cd /komodo-in-a-box && \
+  git checkout starter-kit
 CMD ["/bin/bash"]
